# mcp-gateway

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  docker-compose.quickstart.yml  docker-compose.yml
.cargo/: deny.toml
.github/workflows/: binary-release.yml  ci.yml  docker-release.yml  release.yml  reusable-security-cargo-deny.yml  reusable-security-rustsec.yml  reusable-security-trivy-image.yml  security-cargo-deny.yml  security-rustsec.yml  security-trivy-adapter.yml  security-trivy-gateway.yml  security-trivy-migrator.yml  security-trivy-operator.yml  security-trivy-ui.yml  ui-docker-release.yml
crates/adapter/: Cargo.toml  README.md
crates/adapter/src/: backend.rs  config.rs  http.rs  main.rs  mcp_server.rs  session_manager.rs  supervisor.rs  timeouts.rs
crates/env/: Cargo.toml
crates/env/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway-cli/: Cargo.toml
crates/gateway-cli/src/: api.rs  main.rs
crates/gateway-operator/: Cargo.toml  README.md
crates/gateway-operator/src/: main.rs
crates/gateway/migrations/: 20260201145648_audit_mode3.sql  20260209120000_transport_limits.sql  20260217110000_upstream_lifecycle_and_managed_mcp.sql  20260222210000_managed_mcp_deployment_desired_state.sql  20260306123000_managed_mcp_reconciler_heartbeat.sql
crates/gateway/src/: admin.rs  audit.rs  audit_retention.rs  config.rs  contracts.rs  main.rs  managed_mcp.rs  mcp.rs  oidc.rs  outbound_safety.rs  pg_invalidation.rs  pg_store.rs  profile_http.rs  serde_helpers.rs  session_token.rs  store.rs  tenant.rs  tenant_catalog.rs  tenant_token.rs  timeouts.rs  transport_limits.rs  upstream_validation.rs
crates/gateway/src/mcp/: ids.rs  probe.rs  tool_call.rs  upstream.rs
crates/gateway/tests/: integration_audit_events.rs  integration_audit_retention.rs  integration_mode1_config.rs  integration_mode3_limits.rs  integration_mode3_pg.rs  integration_pg_fanout_notifications.rs  integration_tenant_api.rs
crates/gateway/tests/common/: mcp.rs  mod.rs  pg.rs
crates/http-tools/: Cargo.toml
crates/http-tools/src/: config.rs  runtime.rs  semantics.rs
crates/openapi-tools/: Cargo.toml
crates/openapi-tools/src/: resolver.rs  runtime.rs
crates/test-support/: Cargo.toml
crates/tool-transforms/src/: lib.rs
deploy/helm/unrelated-mcp-gateway/: Chart.yaml  values.yaml
deploy/helm/unrelated-mcp-gateway-managed-fixtures/: Chart.yaml  values.yaml
deploy/helm/unrelated-mcp-gateway-managed-fixtures/templates/: _helpers.tpl  seed-job.yaml
deploy/helm/unrelated-mcp-gateway-operator/: Chart.yaml  values.yaml
deploy/helm/unrelated-mcp-gateway-operator/crds/: mcpservers.gateway.unrelated.ai.yaml
deploy/helm/unrelated-mcp-gateway-operator/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  serviceaccount.yaml
deploy/helm/unrelated-mcp-gateway-stack/: Chart.yaml  values-dev.yaml  values-kind-local.yaml  values-prod.yaml  values.yaml
deploy/helm/unrelated-mcp-gateway-ui/: Chart.yaml  values.yaml
deploy/helm/unrelated-mcp-gateway-ui/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  inline-secret.yaml  networkpolicy.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
deploy/helm/unrelated-mcp-gateway/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress-admin.yaml  ingress-data.yaml  inline-secret.yaml  migrator-job.yaml  networkpolicy.yaml  pdb.yaml  service-admin.yaml  service-data.yaml  serviceaccount.yaml
deploy/helm/unrelated-mcp-postgres/: Chart.yaml  values.yaml
deploy/helm/unrelated-mcp-postgres/templates/: _helpers.tpl  secret.yaml  service.yaml  statefulset.yaml
docs/: CICD.md  INDEX.md
docs/adapter/: ARCHITECTURE.md  CONFIG.md  INDEX.md  TESTING.md
docs/adapter/config/: ADAPTER.md  ENV_AND_PRECEDENCE.md  IMPORTS.md
docs/deploy/: HELM.md  K8S_TESTING.md
docs/gateway/: ARCHITECTURE.md  AUDIT.md  DATA_PLANE_AUTH.md  INDEX.md  MCP_PROXYING.md  MCP_SETTINGS.md  MODE3_TENANT_OVERLAY.md  OUTBOUND_HTTP_SAFETY.md
docs/gateway-cli/: COMMANDS.md  INDEX.md
docs/ui/: INDEX.md
tests/fixtures/: adapter-invalid-restart-backoff.yaml  http-tools-auth-missing-env.yaml  http-tools-httpbin-host.yaml  http-tools-httpbin.yaml  http-tools-invalid-method.yaml  minimal-no-servers.yaml  openapi-petstore-host.yaml  openapi-petstore3.yaml  openapi-probe-fails.yaml  openapi-spechash-default-policy.yaml  stdio-aggregation.yaml  stdio-smoke.yaml  test-config.yaml
tests/fixtures/managed-images/: stdio-aggregation.Dockerfile  stdio-smoke.Dockerfile
ui/: Dockerfile  package-lock.json  package.json  proxy.ts
ui/app/_components/: UnlockTenantCard.tsx
ui/app/api/session/logout/: route.ts
ui/app/api/session/unlock/: route.ts
ui/app/api/tenant/audit/analytics/tool-calls/by-api-key/: route.ts
ui/app/api/tenant/audit/events/: route.ts
ui/app/api/tenant/audit/settings/: route.ts
ui/app/api/tenant/managed-mcp/deployables/: route.ts
ui/app/api/tenant/managed-mcp/deployments/: route.ts
ui/app/api/tenant/managed-mcp/deployments/[id]/: route.ts
ui/app/api/tenant/transport/limits/: route.ts
ui/app/api/tenant/upstreams/[id]/session-activity/: route.ts
ui/app/audit/: page.tsx
ui/app/audit/_components/: audit-client.tsx
ui/app/onboarding/: page.tsx
ui/app/profiles/: page.tsx
ui/app/profiles/[id]/: page.tsx
ui/app/profiles/[id]/_components/: connection-info-card.tsx  mcp-settings-card.tsx  mcp-surface-section.tsx  security-tab.tsx  tool-policy-editor.tsx  tools-new-tab.tsx
ui/app/profiles/new/: page.tsx
ui/app/settings/: page.tsx
ui/app/sources/: page.tsx
ui/app/sources/deployment/: page.tsx
ui/app/sources/new/managed-mcp/: page.tsx
ui/app/sources/new/upstream/: page.tsx
ui/app/sources/tool-sources/[sourceId]/: page.tsx
ui/app/sources/upstreams/[upstreamId]/: page.tsx
ui/components/layout/: app-shell.tsx
ui/components/ui/: callout.tsx  index.ts  modal.tsx  toggle.tsx
ui/src/lib/: env.ts  mcpSettings.ts  queryKeys.ts  tenant-session.ts  tenantApi.ts  types.ts
ui/tests/: session-routes.test.ts
(+2 files in other folders)
