[package]
name = "unrelated-env"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Small env-parsing helpers shared across workspace crates"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
