[package]
name = "unrelated-mcp-gateway-operator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.43"
futures = "0.3.32"
hostname = "0.4.2"
k8s-openapi = { version = "0.27.0", features = ["v1_31"] }
kube = { version = "3.0.1", features = ["runtime", "derive", "client", "rustls-tls"] }
kube-runtime = "3.0.1"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
bollard = "0.20.1"
