[package]
name = "unrelated-http-tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared HTTP tool DSL + runtime for Unrelated MCP (used by adapter and gateway)"

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unrelated-env = { path = "../env" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
url = "2"
parking_lot = "0.12"
openapiv3 = "2"
rmcp = { version = "0.12.0" }
tokio = { version = "1", features = ["net"] }
tracing = "0.1"
base64 = "0.22.1"
mime = "0.3.17"

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
