[package]
name = "unrelated-openapi-tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared OpenAPI->MCP tooling (used by adapter and gateway)"

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
url = "2"
parking_lot = "0.12"
openapiv3 = "2"
sha2 = "0.10"
hex = "0.4"
regex = "1"
rmcp = { version = "0.15.0" }
unrelated-http-tools = { path = "../http-tools" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
base64 = "0.22.1"
mime = "0.3.17"

[dev-dependencies]
tempfile = "3"
