[package]
name = "unrelated-test-support"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1", features = ["time"] }
